Fixed alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,13 +54,13 @@ ul {
 }
 
 .broken-elevator {
-    width: 100px;
+    width: 80px;
     margin-right: auto;
     margin-left: 0;
 }
 
 .elevator {
-    width: 100px;
+    width: 80px;
     margin-left: auto;
     margin-right: 0px;
 }
@@ -68,7 +68,7 @@ ul {
 .elevators {
     text-align: center;
     cursor: pointer;
-    width: 150px;
+    width: 160px;
     margin: auto;
 }
 
